Fixed NumberStepper to update its initial value on change; Fixed DropdownButton to toggle open and close correctly based on the refs; Fixed normal DropdownMenu z-index issue; Fixed product existence validation check and added validation for duplicate products based on id; Changed DropdownButton to mouseup for buttonRef clicks; Changed some padding with the Bag/Cart Card; Added an index to ProductToBeAdded type to check for product index in the bag; gets updated by AddToBag button and Bag Card; Added scrollableRef to BagContext and is used to scroll the BagItemsList in the Bag when clicking the AddToBag button;

--- a/app/components/Bag/Bag.css
+++ b/app/components/Bag/Bag.css
@@ -60,10 +60,9 @@
 
 /****************** Bag Content Info Card ******************/
 .bag-container {
-  /* background-color: white; */
   position: relative;
-  max-height: 325px;
-  padding: 0.5rem;
+  max-height: 330px;
+  padding: 0.5rem 0;
   overflow-x: hidden;
   overflow-y: scroll;
   -webkit-scrollbar-width: thin;
@@ -81,7 +80,7 @@
 }
 
 .bag-card {
-  width: 325px;
+  width: 350px;
   display: grid;
   position: relative;
   grid-template-columns: 30% 70%;
@@ -150,8 +149,8 @@
 
 .bag-close {
   position: absolute;
-  top: -10px;
-  right: 0;
+  top: -0.5rem;
+  right: 5px;
   width: 25px;
   height: 25px;
 }
